k8-manifests/monitoring/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    # NGINX Ingress annotations
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: monitoring-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - Prometheus'
    
    # Cert-manager for SSL certificates
    cert-manager.io/cluster-issuer: "letsencrypt-dns"
    
    # External DNS annotations - force target IP to LoadBalancer external IP
    external-dns.alpha.kubernetes.io/hostname: prometheus.isaiahmichael.com
    external-dns.alpha.kubernetes.io/target: "74.177.117.202"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - prometheus.isaiahmichael.com
    secretName: prometheus-tls-secret
  rules:
  - host: prometheus.isaiahmichael.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-prometheus
            port:
              number: 9090
